syntax = "proto3";

import "google/protobuf/any.proto";

package protocol;

option go_package = "protocol/";
option java_package = "eu.novusmc.athena.common";

message Service {
  enum Type {
    TYPE_UNKNOWN = 0;
    TYPE_PROXY = 1;
    TYPE_SERVER = 2;
  }
  enum State {
    STATE_UNKNOWN = 0;
    STATE_PENDING = 1;
    STATE_SCHEDULED = 2;
    STATE_ONLINE = 3;
    STATE_STOPPING = 4;
    STATE_OFFLINE = 5;
  }
  string name = 1;
  Type type = 2;
  State state = 3;
  int32 memory = 4;
  int32 port = 5;
  string group = 6;
  string slave = 7;
}

message Group {
  string name = 1;
  Service.Type type = 2;
  int32 min_services = 3;
  int32 max_services = 4;
  int32 memory = 5;
  int32 start_port = 6;
}

message Envelope {
  google.protobuf.Any payload = 1;
}

message PacketAuthenticate {
  string slave_name = 1;
  string secret_key = 2;
  int32 memory = 3;
}

message PacketAuthSuccess {}

message PacketAuthFailed {
  string message = 1;
}

message PacketScheduleServiceRequest {
  Service service = 1;
  Group group = 2;
}

message PacketServiceStartFailed {
  string service_name = 1;
  string message = 2;
}

message PacketServiceStopped {
  string service_name = 1;
}

message PacketServiceOnline {
  string service_name = 1;
  int32 port = 2;
}

message PacketServiceConnect {
  string key = 1;
}

message PacketStopService {
  string service_name = 1;
}
